--- a/correcao.html
+++ b/correcao.html
@@ -1,161 +1,42 @@
-<div class="section-contato pt-5 pb-lg-5" id="container-form">
-      <div class="container mx-auto pt-5 pb-lg-5">
-        <div class="row contato mx-md-5 mx-4">
-          <div class="col-lg  -6 brasil text-center ">
-            <div class="my-5 mx-3">
-              <img src="img/mapa-brasil.svg" class="mapa-brasil w-100" alt="Imagem com o mapa do Brasil">
-              <h2>ATUAMOS EM TODO O BRASIL</h2>
-            </div>
+<section class="slider">
+      <div class="slider-track">
+        <article class="slide active">
+          <div class="overlay"></div>
+          <img src="img/slide-mapeamento-lg.png" srcset="
+          img/slide-mapeamento-sm.png 750w,
+          img/slide-mapeamento-md.png 1200w,
+          img/slide-mapeamento-lg.png 1500w
+        " sizes="(max-width: 992px) 100vw, 1500px" alt="Mapeamento técnico de propriedade rural" />
+
+          <div class="slide-caption">
+            <h1>Precisão que impulsiona sua produção</h1>
+            <p>Mapeamos sua terra com tecnologia e experiência para produzir com segurança.</p>
           </div>
-          <div class="col-lg-6 div-form">
-            <form class="my-5 mx-3">
-              <div class="mb-4">
-                <label for="name" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="name" placeholder="Digite seu nome" required>
-              </div>
+        </article>
 
-              <div class="mb-4">
-                <label for="email" class="form-label">Telefone</label>
-                <input type="tel" class="form-control" id="tel" placeholder="Digite seu telefone" required>
-              </div>
-
-              <div class="mb-4">
-                <div class="row">
-                  <div class="col-lg-4">
-                    <label for="uf" class="form-label">UF</label>
-                    <select class="form-select" aria-label="Default select example">
-                      <option selected>Selecione o estado</option>
-                      <option value="AC">Acre (AC)</option>
-                      <option value="AL">Alagoas (AL)</option>
-                      <option value="AP">Amapá (AP)</option>
-                      <option value="AM">Amazonas (AM)</option>
-                      <option value="BA">Bahia (BA)</option>
-                      <option value="CE">Ceará (CE)</option>
-                      <option value="DF">Distrito Federal (DF)</option>
-                      <option value="ES">Espírito Santo (ES)</option>
-                      <option value="GO">Goiás (GO)</option>
-                      <option value="MA">Maranhão (MA)</option>
-                      <option value="MT">Mato Grosso (MT)</option>
-                      <option value="MS">Mato Grosso do Sul (MS)</option>
-                      <option value="MG">Minas Gerais (MG)</option>
-                      <option value="PA">Pará (PA)</option>
-                      <option value="PB">Paraíba (PB)</option>
-                      <option value="PR">Paraná (PR)</option>
-                      <option value="PE">Pernambuco (PE)</option>
-                      <option value="PI">Piauí (PI)</option>
-                      <option value="RJ">Rio de Janeiro (RJ)</option>
-                      <option value="RN">Rio Grande do Norte (RN)</option>
-                      <option value="RS">Rio Grande do Sul (RS)</option>
-                      <option value="RO">Rondônia (RO)</option>
-                      <option value="RR">Roraima (RR)</option>
-                      <option value="SC">Santa Catarina (SC)</option>
-                      <option value="SP">São Paulo (SP)</option>
-                      <option value="SE">Sergipe (SE)</option>
-                      <option value="TO">Tocantins (TO)</option>
-                    </select>
-                  </div>
-                  <div class="col mt-4 mt-lg-0">
-                    <label for="email" class="form-label">Cidade</label>
-                    <input type="email" class="form-control" id="email" placeholder="Cidade" required>
-                  </div>
-                </div>
-              </div>
-
-              <div class="mb-4">
-                <label for="message" class="form-label">Mensagem</label>
-                <textarea class="form-control" id="message" rows="4" placeholder="Qual o seu problema..."
-                  required></textarea>
-              </div>
-
-              <button type="submit" class="btn btn-primary w-100 py-2">
-                <h4 class="mb-0 text-center w-100">Solicitar Atendimento</h4>
-              </button>
-            </form>
+        <article class="slide">
+          <div class="overlay"></div>
+          <img src="img/slide-credito-rural-lg.png" alt="Crédito rural" />
+          <div class="slide-caption">
+            <h1>Crédito certo, na hora certa</h1>
+            <p>Consultoria completa para acesso a linhas de crédito rural.</p>
           </div>
-        </div>
+        </article>
+
+        <article class="slide">
+          <div class="overlay"></div>
+          <img src="img/slide-geoprocessamento-lg.png" alt="Georreferenciamento rural" />
+          <div class="slide-caption">
+            <h1>Seu imóvel regularizado, seu futuro garantido</h1>
+            <p>Georreferenciamento completo para valorizar sua propriedade.</p>
+          </div>
+        </article>
       </div>
-    </div>
-
-<footer>
-    <div class="section-pre pb-5">
-      <svg preserveAspectRatio="none" width="1400" height="160" viewBox="0 0 1400 160" fill="none"
-        xmlns="http://www.w3.org/2000/svg">
-        <g clip-path="url(#clip0_65_3)">
-          <rect width="1400" height="160" fill="white" />
-          <rect width="1400" height="160" fill="#001B18" />
-          <ellipse cx="700" cy="0.5" rx="700" ry="98.5" fill="#002222" />
-        </g>
-        <defs>
-          <clipPath id="clip0_65_3">
-            <rect width="1400" height="160" fill="white" />
-          </clipPath>
-        </defs>
-      </svg>
-      <div class="container d-flex flex-column justify-content-center align-items-center text-center">
-        <h1>Contate-nos</h1>
-        <div class="d-flex flex-column flex-md-row gap-3 my-3 contatos-whatsapp">
-          <nav class="mx-4">
-            <a class="nav-link" href="#">
-              <ul class="nav gap-3">
-                <li class="nav-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#25D366"
-                    viewBox="0 0 24 24">
-                    <path
-                      d="M12.004 2C6.479 2 2 6.477 2 12.002a9.93 9.93 0 001.36 5.02L2 22l5.163-1.344a9.983 9.983 0 004.84 1.246h.001c5.523 0 10.001-4.478 10.001-9.998C22.005 6.477 17.527 2 12.004 2zm0 18.401a8.36 8.36 0 01-4.27-1.177l-.306-.182-3.064.797.82-2.985-.199-.308a8.36 8.36 0 01-1.258-4.406c0-4.617 3.754-8.371 8.371-8.371 2.237 0 4.34.872 5.92 2.453a8.355 8.355 0 012.451 5.918c0 4.617-3.755 8.371-8.372 8.371zm4.557-6.285c-.25-.125-1.479-.73-1.708-.812-.23-.082-.398-.124-.566.126-.166.25-.649.812-.797.977-.146.166-.292.187-.541.063a6.937 6.937 0 01-2.037-1.25 7.677 7.677 0 01-1.423-1.764c-.149-.25-.016-.387.112-.512.116-.114.25-.291.375-.437.124-.146.165-.25.25-.416.082-.166.042-.312-.021-.437-.062-.124-.562-1.357-.77-1.857-.203-.487-.408-.42-.566-.428l-.48-.01a.924.924 0 00-.666.312c-.23.25-.875.855-.875 2.084s.895 2.42 1.02 2.588c.124.166 1.762 2.693 4.277 3.778.598.257 1.064.41 1.427.526.599.19 1.143.163 1.574.099.48-.072 1.479-.604 1.688-1.187.208-.583.208-1.083.146-1.187-.063-.104-.23-.167-.479-.292z" />
-                  </svg></li>
-                <li class="nav-item">
-                  <h3>(93) 92987-6543</h3>
-              </ul>
-            </a>
-          </nav>
-
-          <nav class="mx-4">
-            <a class="nav-link" href="#">
-              <ul class="nav gap-3">
-                <li class="nav-item"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#25D366"
-                    viewBox="0 0 24 24">
-                    <path
-                      d="M12.004 2C6.479 2 2 6.477 2 12.002a9.93 9.93 0 001.36 5.02L2 22l5.163-1.344a9.983 9.983 0 004.84 1.246h.001c5.523 0 10.001-4.478 10.001-9.998C22.005 6.477 17.527 2 12.004 2zm0 18.401a8.36 8.36 0 01-4.27-1.177l-.306-.182-3.064.797.82-2.985-.199-.308a8.36 8.36 0 01-1.258-4.406c0-4.617 3.754-8.371 8.371-8.371 2.237 0 4.34.872 5.92 2.453a8.355 8.355 0 012.451 5.918c0 4.617-3.755 8.371-8.372 8.371zm4.557-6.285c-.25-.125-1.479-.73-1.708-.812-.23-.082-.398-.124-.566.126-.166.25-.649.812-.797.977-.146.166-.292.187-.541.063a6.937 6.937 0 01-2.037-1.25 7.677 7.677 0 01-1.423-1.764c-.149-.25-.016-.387.112-.512.116-.114.25-.291.375-.437.124-.146.165-.25.25-.416.082-.166.042-.312-.021-.437-.062-.124-.562-1.357-.77-1.857-.203-.487-.408-.42-.566-.428l-.48-.01a.924.924 0 00-.666.312c-.23.25-.875.855-.875 2.084s.895 2.42 1.02 2.588c.124.166 1.762 2.693 4.277 3.778.598.257 1.064.41 1.427.526.599.19 1.143.163 1.574.099.48-.072 1.479-.604 1.688-1.187.208-.583.208-1.083.146-1.187-.063-.104-.23-.167-.479-.292z" />
-                  </svg></li>
-                <li class="nav-item">
-                  <h3>(93) 92987-6543</h3>
-              </ul>
-            </a>
-          </nav>
-        </div>
-        <nav class="my-4">
-          <ul class="nav gap-3 menu-contatos">
-            <li class="nav-item"><a class="nav-link" href="#">
-                <h6>Home</h6>
-              </a></li>
-              <li class="nav-item"><a class="nav-link" href="#">
-                  <h6>Sobre</h6>
-                </a></li>
-            <li class="nav-item"><a class="nav-link" href="#">
-                <h6>Contatos</h6>
-              </a></li>
-            <li class="nav-item"><a class="nav-link" href="#">
-                <h6>Serviços</h6>
-              </a></li>
-          </ul>
-        </nav>
-        <div class="d-flex gap-5 mt-4">
-          <!-- Ícone do Facebook -->
-          <a href="https://instagram.com" target="_blank" class="text-dark" aria-label="Instagram da FS Engenharia">
-                <svg fill="#ffffff" width="40px" height="40px" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-                  <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
-                </svg>
-          </a>
-
-          <!-- Ícone do Instagram -->
-          <a href="https://instagram.com" target="_blank" class="text-dark" aria-label="Instagram da FS Engenharia">
-            <svg fill="#ffffff" width="40px" height="40px" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-  <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
-</svg>
-          </a>
-          </div>
-      </div>
-    </div>
-    <h5>
-      Todos os direitos reservados &copy; FS Engenharia
-    </h5>
-  </footer>
+      <button class="slider-btn prev" aria-label="Slide anterior">
+        <span class="carousel-control-prev-icon" aria-hidden="true">
+        </span>
+      </button>
+      <button class="slider-btn next" aria-label="Próximo slide">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      </button>
+    </section>
